--- a/templates/repolicator/base.html
+++ b/templates/repolicator/base.html
@@ -19,11 +19,10 @@
             <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
-            {% if social_user.is_authenticated %}
-{#                <a class="nav-link" href="{% url 'social:begin' 'github' %}">Log In with Github</a>#}
-                <a class="nav-link" href="{% url 'login' %}">Log In </a>
-            {% else %}
+            {% if user.is_authenticated %}
                 <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+            {% else %}
+                <a class="nav-link" href="{% url 'social:begin' 'github' %}">Log In with Github</a>
             {% endif %}
         </li>
     </ul>
