--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -2,14 +2,20 @@
 {% block content %}
     <div class="jumbotron">
         <div class="container">
-            <p id="jumbotron-app-name">
+            <h2>
                 This is Repolicator
-            </p>
+            </h2>
             <br>
-            <p id="jumbotron-app-desc">
+            <p>
                 An app which will replicate it's own code to your Github account.
             </p>
-
+            {% if user.is_authenticated %}
+                <a class="btn btn-light btn-lg" href="{% url 'replicate' %}">REPLICATE REPO TO ME</a>
+            {% else %}
+            <p>
+                To replicate repository with code of this app, first you need to <a class="link" href="{% url 'social:begin' 'github' %}">login with GitHub</a>
+            </p>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
