--- a/templates/repolicator/base.html
+++ b/templates/repolicator/base.html
@@ -16,7 +16,7 @@
     <a class="navbar-brand" href="{% url 'index' %}">Repolicator</a>
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="{% url 'index' %}">Home</a>
         </li>
         <li class="nav-item">
             {% if user.is_authenticated %}
